Add one common KIPI-Plugins actionCollection(), to clean up shortcut editor dialog. Put actions of every plugin in there. If a plugin has more then 3 actions, generate a dedicated category inside the actionCollection.

BUG:182599

svn path=/trunk/extragear/graphics/digikam/; revision=921214